--- a/mage/src/main/res/values/strings.xml
+++ b/mage/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
     <string name="change">Change</string>
     <string name="force_submit"><u>Force Submit</u></string>
 
+    <string name="account_created_title">Thank you for signing up!</string>
+    <string name="account_created_active">Your account has been created and is now active.</string>
+    <string name="account_created_inactive">Your account has been created but it is not active.  An administrator needs to activate your account before you can log in.</string>
+
     <string name="advanced_time_filter_options">Advanced Time Filter Options</string>
     <string name="observation_filter">Observations</string>
     <string name="locations_filter">Locations</string>
